<resources>
    <string name="app_name">PCOS</string>
    <string name="go_with_the_flow">Go With The Flow!</string>
    <string name="doctor">Doctor</string>
    <string name="patient">Patient</string>
    <string name="welcome">Welcome</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="patient_name">Patient Name:</string>
    <string name="email_id">Email ID:</string>
    <string name="confirm_password">Confirm Password:</string>
    <string name="done">Done</string>
    <string name="submit">Submit</string>
    <string name="new_password">New Password :</string>
    <string name="enter_the_details">ENTER THE DETAILS</string>
    <string name="ques_1">1.Feeling lack of control over the situation with periods</string>
    <string name="options">Options</string>
    <string name="placeholder">PlaceHolder</string>
    <string name="next">Next</string>
    <string name="name">Name</string>
    <string name="add_patient_here">Add Patient Here</string>
    <string name="add_patient">Add Patient</string>
    <string name="patient_profile">Patient Profile</string>
    <string name="patient_activity">Patient Activity</string>
    <string name="patient_s_menstrual_calender">Patient\'s Menstrual Calender</string>
    <string name="view_patient_s_today_progress">View Patient’s Today Progress</string>
    <string name="view_patient_s_medical_records">View Patient’s Medical Records</string>
    <string name="age">Age</string>
    <string name="occupation">Occupation</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="bmi">BMI</string>
    <string name="any_other_disease">Any Other Disease</string>
    <string name="obstetric_score">Obstetric Score</string>
    <string name="day">Day</string>
    <string name="calories_taken">Calories Taken</string>
    <string name="no_of_steps">No.of.Steps</string>
    <string name="exercise_duration">Exercise Duration</string>
    <string name="today_s_feedback">Today\'s Feedback</string>
    <string name="medical_reports">Medical Reports</string>
    <string name="high_stepping">HIGH STEPPING</string>
    <string name="_20_mins">20 Mins</string>
    <string name="_3_sets_each_set_12_rep">3 Sets , Each Set 12 rep</string>
    <string name="exercises_context">In your first set is 12 rep with 5 kg dumbbell you can increase your dumbbell weight try to do 10 rep then increase weight if you want with min 8 rep.</string>
    <string name="watch">Watch</string>
    <string name="your_time_your_space">Your Time, Your space.</string>
    <string name="screen_22">Helping you to take fitness to the top level.</string>
    <string name="get_stronger_and_fitter_with_us">Get stronger and fitter with us</string>
    <string name="high_steppings">High Steppings</string>
    <string name="side_hops">SIDE HOPS</string>
    <string name="about_pcos"><![CDATA[Polycystic ovary syndrome (PCOS) is a problem with hormones that happens during the reproductive years. If you have PCOS, you may not have periods very often. Or you may have periods that last many days. You may also have too much of a hormone called androgen in your body. With PCOS, many small sacs of fluid develop along the outer edge of the ovary. These are called cysts. The small fluid-filled cysts contain immature eggs. These are called follicles. The follicles fail to regularly release eggs. The exact cause of PCOS is unknown. Early diagnosis and treatment along with weight loss may lower the risk of long-term complications such as type 2 diabetes and heart disease. Symptoms of PCOS often start around the time of the first menstrual period. Sometimes symptoms develop later after you have had periods for a while. The symptoms of PCOS vary. A diagnosis of PCOS is made when you have at least two of these: Irregular periods. Having few menstrual periods or having periods that aren\'t regular are common signs of PCOS. So is having periods that last for many days or longer than is typical for a period. For example, you might have fewer than nine periods a year. And those periods may occur more than 35 days apart. You may have trouble getting pregnant. Too much androgen. High levels of the hormone androgen may result in excess facial and body hair. This is called hirsutism. Sometimes, severe acne and male-pattern baldness can happen, too. Polycystic ovaries. Your ovaries might be bigger. Many follicles containing immature eggs may develop around the edge of the ovary. The ovaries might not work the way they should. PCOS signs and symptoms are typically more severe in people with obesity.]]></string>
    <string name="date">Date</string>
    <string name="gif_image">GIF Image</string>
</resources>