<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".AddPatients"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Background Image -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/piv11"
        android:alpha="0.1"
        android:elevation="0dp" />
    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_patient"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"/>


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="230dp"
        android:text="@string/patient_name"
        android:textSize="16sp"

        android:layout_marginStart="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.145"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:textAlignment="center"
        android:layout_marginStart="40dp"
        android:layout_marginTop="220dp"
        android:layout_toEndOf="@+id/textView"
        android:ems="10"
        android:inputType="text"
        android:background="@drawable/curved_border3"
        tools:layout_editor_absoluteX="187dp"
        tools:layout_editor_absoluteY="202dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="280dp"
        android:text="@string/email_id"
        android:textSize="16sp"

        android:layout_marginStart="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.145"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_marginStart="40dp"
        android:textAlignment="center"
        android:layout_marginTop="270dp"
        android:layout_toEndOf="@+id/textView"
        android:ems="10"
        android:background="@drawable/curved_border3"
        android:inputType="text"
        tools:layout_editor_absoluteX="187dp"
        tools:layout_editor_absoluteY="202dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="330dp"
        android:text="@string/password"
        android:textSize="16sp"

        android:layout_marginStart="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.145"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextText3"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="320dp"
        android:textAlignment="center"
        android:background="@drawable/curved_border3"
        android:layout_toEndOf="@+id/textView"
        android:ems="10"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="187dp"
        tools:layout_editor_absoluteY="202dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="380dp"
        android:text="@string/confirm_password"
        android:textSize="16sp"
        android:layout_marginStart="10dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.145"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextText4"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="370dp"
        android:textAlignment="center"
        android:layout_toEndOf="@+id/textView"
        android:ems="10"
        android:background="@drawable/curved_border3"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="187dp"
        tools:layout_editor_absoluteY="202dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="460dp"
        android:layout_marginStart="170dp"
        android:backgroundTint="@color/pink"/>
</RelativeLayout>
