<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ForgotPassword"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="212dp"
        android:text="Username :"
        android:textSize="18sp"
        android:layout_marginStart="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.145"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="200dp"
        android:textAlignment="center"
        android:layout_toEndOf="@+id/textView"
        android:ems="10"
        android:inputType="text"
        android:background="@drawable/border"
        tools:layout_editor_absoluteX="187dp"
        tools:layout_editor_absoluteY="202dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="260dp"
        android:text="@string/email_id"
        android:textSize="18sp"
        android:layout_marginStart="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.145"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginStart="70dp"
        android:textAlignment="center"
        android:layout_marginTop="250dp"
        android:background="@drawable/border"
        android:layout_toEndOf="@+id/textView"
        android:ems="10"
        android:inputType="text"
        tools:layout_editor_absoluteX="187dp"
        tools:layout_editor_absoluteY="202dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="310dp"
        android:text="@string/new_password"
        android:textSize="18sp"
        android:layout_marginStart="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.145"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextText3"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginStart="70dp"
        android:background="@drawable/border"
        android:layout_marginTop="300dp"
        android:textAlignment="center"
        android:layout_toEndOf="@+id/textView"
        android:ems="10"
        android:inputType="text"
        tools:layout_editor_absoluteX="187dp"
        tools:layout_editor_absoluteY="202dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="360dp"
        android:text="@string/confirm_password"
        android:textSize="18sp"
        android:layout_marginStart="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.145"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextText4"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="350dp"
        android:layout_toEndOf="@+id/textView"
        android:ems="10"
        android:textAlignment="center"
        android:background="@drawable/border"
        android:inputType="text"
        tools:layout_editor_absoluteX="187dp"
        tools:layout_editor_absoluteY="202dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="170dp"
        android:layout_marginTop="500dp"
        android:backgroundTint="@color/pink"
        android:text="@string/submit" />
</RelativeLayout>
